v4.7
-----
+ Adds new sorting option to wishlist that lets you sort by discount percentage

v4.6
-----
+ Enhanced Steam no longer executes on pages where you enter your account details
+ Badge progress page shows number of games eligible for booster packs
+ Added link to Enhanced Steam menu for the official Steam group
+ Added option to hide all active listings on market homepage by default
+ Added option to enable/disable automatic age verification
+ Added wishlist filters to show only games on sale (Thanks Marcelloz!)
+ Added additional highlighting to the user activity page
: Homepage carousel descriptions now pull the embed snippet from the app page
: Fixed a bug where homepage button was incorrectly showing 3 times in some regions
: Fixed a bug where market highlighting could be incorrect if item names were equal
: Fixes a bug where profile link information was not correct while not logged in

v4.5
-----
+ Adds option to remove "NEW" from the Steam header above your username
+ Replaces "No image found" on profile page with correct game image
+ Adds a "Remove all owned from wishlist" button
+ Adds an "Add to cart" button to search results
+ Adds option to display "package" info on all apps
+ Adds warning when browsing Steam in your non-account region
+ Adds a homepage button for items that cost less than your wallet balance
: Fixes a bug where multipacks weren't calculating correctly in some currencies
: Fixes a bug where items with "&" in their name weren't highlighting on market
: Fixed SteamDB links to work with new Valve code changes near "Share" and "Embed" buttons
: Fixes broken images on unpublished subscription pages

v4.4
-----
+ Adds "X games with drops remaining" to badge page
+ Adds foil badge progress link to non-foil badge progress page
: Fixes a bug where foil badges were linking to non-foil market pages
: Better uPlay and GFWL DRM detection on app pages
+ Adds highlighting to more sales pages, midweek and weekend deals