@@ -211,6 +211,24 @@ function highlight_friends_want(node, appid) {
 	});
 }
 
+function highlight_friends_own(node, appid) {
+	storage.get(function(settings) {
+		node.classList.add("es_highlight_friends_own");
+
+		if (settings.highlight_friends_own === undefined) { settings.highlight_friends_own = false; storage.set({'highlight_friends_own': settings.highlight_friends_own});}
+		if (settings.highlight_friends_own_color === undefined) { settings.highlight_friends_own_color = "#999900"; storage.set({'highlight_friends_own_color': settings.highlight_friends_own_color});}
+		if (settings.highlight_friends_own) highlight_node(node, settings.highlight_friends_own_color);
+
+		if (settings.tag_friends_own === undefined) { settings.tag_friends_own = true; storage.set({'tag_friends_own': settings.tag_friends_own});}
+		if (settings.tag_friends_own_color === undefined) { settings.tag_friends_own_color = "#999900"; storage.set({'tag_friends_own_color': settings.tag_friends_own_color});}
+		if (settings.tag_friends_own) add_tag(			
+			node,
+			localized_strings[language].tag_friends_own.replace("__appid__", appid).replace("__friendcount__", getValue(appid + "friendsown")),
+			settings.tag_friends_own_color
+		);
+	});
+}
+
 function highlight_node(node, color) {
 	storage.get(function(settings) {
 		var $node = $(node);
@@ -2537,6 +2555,7 @@ function get_app_details(appids) {
 					setValue(appid + "owned", (app_data.data.is_owned === true));
 
 					if (app_data.data.friendswant) setValue(appid + "friendswant", app_data.data.friendswant.length);
+					if (app_data.data.friendsown) setValue(appid + "friendsown", app_data.data.friendsown.length);
 				}
 				// Time updated, for caching.
 				setValue(appid, parseInt(Date.now() / 1000, 10));
@@ -2596,6 +2615,7 @@ function highlight_app(appid, node) {
 	if (getValue(appid + "guestpass")) highlight_inv_guestpass(node);
 	if (getValue(appid + "coupon")) highlight_coupon(node);
 	if (getValue(appid + "friendswant")) highlight_friends_want(node, appid);
+	if (getValue(appid + "friendsown")) highlight_friends_own(node, appid);
 }
 
 function fix_community_hub_links() {
