@@ -23,6 +23,7 @@
             options_gift: "Items Stored As Gift",
             options_guest: "Items You Have A Guest Pass For",
             options_friends_wishlist: "Items Your Friends Have Wishlisted",
+			options_friends_own: "Items Your Friends Own",
 			options_hide_early_access: "Early Access Items in New Releases",
             options_hide_install: "Hide \"Install Steam\" button",
 			options_send_age_info: "Automatically send age verification when requested",
@@ -72,6 +73,7 @@
             tag_inv_gift: "Gift",
             tag_inv_guestpass: "Guestpass",
             tag_friends_want: "<a href=\"http://steamcommunity.com/my/friendsthatplay/__appid__\">__friendcount__ wish for</a>",
+			tag_friends_own: "__friendcount__ own",
             inventory_market_text: "Show Market Price on Inventory Page (Experimental!)",
             credits: "Credits",
             stores: "Stores",
